[package]
name = "qp-sys"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Lance Fuller <matthewlancefuller@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Rust FFI bindings for Quantum Leaps' Quantum Platform."
documentation = "https://docs.rs/qp-sys"
repository = "https://github.com/massivelivefun/qp-sys"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
